--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MD-RTF-EDITOR</title>
+    <title>MD-EDITOR</title>
     <style>
         html,body,.app,.md-editor,.rtf-editor{
-            height: 100%;
+            min-height: 100%;
         }
-        .md-editor{
+        .editor{
             width: 50%;
             resize: none;
         }
-        .rtf-editor{
+        .viewer{
             background-color:lavenderblush;
             border: 1px solid rgb(169, 169, 169);
             width:50%;
