--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -18,6 +18,9 @@
         #editor>*{
             left: 0px !important;
         }
+        #editor>.ace_scrollbar-v{
+            left: auto !important;
+        }
         .viewer{
             position: absolute;
             height: 97%;
