--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MD-EDITOR</title>
     <style>
-        html,body,.app,.md-editor,.rtf-editor{
-            min-height: 100%;
+        html,body,.app,.editor{
+            height: 100%;
         }
         #editor { 
             position: absolute;
-            height: 97%;
+            height: 93.9%;
             width: 49%;
             border: 1px solid lightslategrey;
         }
